fix: support on smallest screens

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -51,6 +51,7 @@ a{
 }
 
 body {
+  min-width: 375px;
   min-height: 100vh;
   background: var(--color-background);
   font-family: "Gilroy", serif;
